# gogo_gazelle

./: .bazelignore  .bazeliskrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.aspect/cli/: config.yaml
libs/dogs/: package.json  tsconfig.json
libs/dogs/src/: dogs.ts
libs/dogs/src/paws/: index.ts  paws.ts
src/: index.ts
src/app/: app.test.ts  app.ts
src/app/food/: index.tsx
src/app/pets/: pets.ts
src/utils/: utils.ts
