load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "gogo_gazelle",
    srcs = ["jest.config.ts"],
    deps = [
        ":node_modules/@types/jest",
        ":node_modules/jest",
    ],
)
